# arete

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  PHASE_5_4_COMPLETION_REPORT.md  README.md  SIMPLE_LLM_USAGE.md  STREAMLIT_INTERFACE.md  TODO.md  chat_fast.py  chat_rag_clean.py  chat_simple.py  check_documents_language.py  check_structure.txt  check_weaviate_data.py  clear_databases.py  comprehensive_prompt_test.py  debug_embeddings.py  debug_regex.py  debug_text_quality.py  demo_chat_interface.py  demo_document_ingestion.py  docker-compose.yml  enhanced_philosophical_pipeline.py  enhanced_philosophical_text_processor.py  examine_ui.py  find_existing.py  fix_mypy_types.py  ingest_restructured_text.py  process_classical_texts.py  process_full_classical_texts.py  pyproject.toml  reflex_app.py  requirements-dev.txt  requirements.txt  requirements_reflex.txt  (+19 more)
.claude/: settings.local.json
.claude/agents/: daisyui-specialist-bounded.md  frontend-architect-bounded.md  neo4j-agent.md  reflex-specialist-bounded.md  tailwind-specialist-bounded.md
.claude/commands/: dev-cycle.md  go.md  update.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
.memory/: architecture_decisions.md  development_learnings.md  index.md
.memory/architecture/: decisions.md  patterns.md
.memory/archived/: 2025-08.md
.memory/development/: bugs.md  learnings.md  phase-7-2-testing-validation.md  workflows.md
.serena/: project.yml
.serena/memories/: phase-5-3-document-viewer-architecture.md  phase-6-3-streamlit-stabilization-fixes.md
arete/: __init__.py  arete.py  state.py
arete/components/: __init__.py  accessibility.py  navigation.py
arete/pages/: __init__.py  chat.py  home.py
assets/: GPT-GraphRAG_Classical_Philosophy.md  Gemini-LLM_GraphRAG_for_Philosophy_Texts.md  Kimi-Detecção_relações_filosóficas.md
components/: __init__.py
config/: CLAUDE.md  development.env  environment.py  production.env  production_rxconfig.py
config/schemas/: neo4j_schema.cypher  weaviate_schema.json
data/pdfs/: README.md
data/processed/: Socratis Dialogues_First_2_books_structured.md
docker/: docker-compose.prod.yml  entrypoint.sh
docs/: CLAUDE.md  REFLEX_MIGRATION_GUIDE.md  development_progress.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md
docs/legacy/: README.md  REFLEX_COMPONENTS.md  REFLEX_MIGRATION.md
examples/: embedding_model_usage.py  prompt_system_demo.py  provider_config_demo.py  simple_llm_demo.py  sparse_retrieval_benchmark.py
planning/: Arete.md  PRD.md  SAD.md  TODO.md  future-updates.md  migration-plan.md  migration-todo.md  plan.md
processed_texts/: Socratis Dialogues_First_2_books_ai_restructured.md
reflex_app/: README.md  analytics_components.py  chat_interface.py  reflex_app.py  requirements.txt  rxconfig.py
scripts/: README.md  llm_manager.py  test_enhanced_prompt.py  test_minimal.py  verify_databases.py  verify_final.py
src/arete/: CLAUDE.md  __init__.py  config.py
src/arete/database/: __init__.py  client.py  exceptions.py  weaviate_client.py
src/arete/graph/: CLAUDE.md
src/arete/ingestion/: ingest_restructured_text.py
src/arete/pipelines/: CLAUDE.md  entity_extraction.py  kg_extraction.py  relationship_extraction.py
src/arete/processing/: __init__.py  chunker.py  extractors.py  heading_aware.py  philosophical_converter.py
src/arete/rag/: CLAUDE.md
src/arete/repositories/: __init__.py  base.py  document.py  embedding.py  entity.py  retrieval.py
src/arete/scripts/: setup_weaviate_collections.py
src/arete/services/: CLAUDE.md  __init__.py  accessibility_service.py  accessibility_service_clean.py  anthropic_embedding_service.py  anthropic_provider.py  base.py  chat_service.py  citation_extraction_service.py  citation_tracking_service.py  citation_validation_service.py  context_composition_service.py  conversation_export_service.py  conversation_sharing_service.py  dense_retrieval_service.py  diversity_service.py  embedding_factory.py  embedding_service.py  enhanced_kg_service.py  expert_validation_service.py  gemini_embedding_service.py  gemini_provider.py  graph_analytics_service.py  graph_traversal_service.py  historical_development_service.py  llm_provider.py  (+25 more)
state/: chat_state.py  document_state.py
tests/: CLAUDE.md  conftest.py  test_anthropic_provider.py  test_batch_embedding.py  test_chat_service_enhanced.py  test_chat_session.py  test_chunk_model.py  test_chunking.py  test_citation_extraction_service.py  test_citation_model.py  test_citation_tracking_service.py  test_citation_validation_service.py  test_config.py  test_context_composition.py  test_conversation_export.py  test_conversation_sharing.py  test_dense_retrieval.py  test_diversity_optimization.py  test_document_viewer.py  test_embedding_integration.py  test_embedding_models.py  test_embedding_service.py  test_embedding_storage.py  test_enhanced_entity_extraction.py  test_enhanced_relationship_extraction.py  test_entity.py  test_entity_extraction.py  test_entity_pipeline.py  test_expert_validation_service.py  test_gemini_provider.py  test_graph_integration.py  test_graph_traversal.py  test_ingest_restructured_text.py  test_integration_context_composition.py  test_keyboard_navigation.py  test_kg_pipeline.py  test_knowledge_graph_service.py  test_llm_failover.py  test_llm_providers.py  test_llm_router.py  (+28 more)
tests/e2e/: test_user_workflows.py
tests/reflex/: conftest.py  test_components.py  test_integration.py
tests/test_data_validation/: test_data_quality_pipeline.py  test_duplicate_detection.py  test_ragas_quality_metrics.py
tests/test_database/: __init__.py  test_neo4j_client.py  test_neo4j_client_focused.py  test_weaviate_client.py
tests/test_reflex_app/: __init__.py  conftest.py
tests/test_repositories/: __init__.py  test_base_repository.py  test_document_repository.py  test_embedding_repository.py  test_entity_repository.py
tests/test_services/: test_graph_analytics_service.py  test_llm_graph_transformer_service.py
(+70 files in other folders)
